Fixed layout bugs, extend 'about' height

--- a/bluetheme.css
+++ b/bluetheme.css
@@ -12,7 +12,7 @@ body{
     font-size: 60px;
     -webkit-text-stroke: 0px;
     -webkit-text-stroke-color: #2A4494;
-    text-shadow: -3px 3px 2px rgb(0 0 0/ 0.5);
+    text-shadow: -3px 3px 2px rgb(0 0 0/ 0.3);
 }
 
 #surname{
@@ -25,7 +25,7 @@ body{
     -webkit-text-stroke: 0px;
     -webkit-text-stroke-color: #2A4494;
     letter-spacing: 14px;
-    text-shadow: -3px 3px 2px rgb(0 0 0 / 0.5);
+    text-shadow: -3px 3px 2px rgb(0 0 0 / 0.3);
 }
 
 header p{
@@ -74,7 +74,7 @@ article{
     margin-top: 100vh;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 150vh;
     top: 0px;
     left: 0px;
     background-image: url("images/pexels-mikhail-nilov-7676883.jpg");
@@ -103,12 +103,11 @@ article img{
 }
 
 footer{
-    display: block;
     text-align: center;
-    margin-top: 200vh;
+    margin-top: 250vh;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     bottom: 0px;
     top: 0px;
     left: 0px;
@@ -151,6 +150,20 @@ h2 {
     display: inline-block;
 }
 
+#webDesignByOli{
+    margin-bottom: 20px;
+}
+
+li:has(#insta){
+    display: flex;
+    justify-content: center;
+}
+
+#insta{
+    margin-top: 20px;
+}
+
+
 article #subheading {
     color: white;
     font-size: 60px;
@@ -183,15 +196,6 @@ li{
     display: table-row;
 }
 
-ul{
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    height: 90vh;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow: hidden;
-}
 
 @media (max-width:1000px){
     article #subheading {
@@ -204,7 +208,7 @@ ul{
     }
 
     #intro{
-        width: 80%;
+        width: 86%;
     }
 
     #email{
